fix banner temp presentation on iphone

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ code {
     monospace;
 }
 
-
 /*loading animation*/
 .loader {
   margin: auto;
@@ -72,7 +71,6 @@ code {
   font-weight: 550;
   margin: 10px 10px 0px 10px;
 }
-
 
 .daily-forecast,
 .hourly-head {
@@ -165,8 +163,6 @@ code {
   height: 320px;
   max-width: 600px;
 }
-
-
 
 .curr-det-weather {
   height: auto;
@@ -292,7 +288,7 @@ code {
 .currtop-loc,
 .currtop-temp,
 .currtop-weather-icon {
-  margin: 10px;
+  margin: 3px 10px;
   font-size: 0.8rem;
 }
 
@@ -308,4 +304,3 @@ code {
 #hrly-top-panel {
   border: none;
 }
-
